example/secondfile/objects/V6_Family_Data__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data</description>
    <fields>
        <fullName>AS_Override_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-AS Override Indicator</description>
        <label>AS Override Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATT_Edge_IP_Address__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-V6 WAN IP Address-ATT Edge IP Address</description>
        <label>ATT Edge IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BFD_Heartbeat_Interval__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BFD Heartbeat Interval</description>
        <label>BFD Heartbeat Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGP_Dampening_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-BGP Dampening Indicator</description>
        <label>BGP Dampening Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <description>Technical field to capture Id of the record from which it has been cloned during MACD. Not required on page layout.</description>
        <label>Cloned From ?</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Edge_IP_Address__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-V6 WAN IP Address-Customer Edge IP Address</description>
        <label>Customer Edge IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Hash_ID__c</fullName>
        <formula>IF(RDS_VLAN_Information__c != null, RDS_VLAN_Information__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Id , RDS_Circuit_and_VLAN_Details_V6__r.Premise__r.DealHash__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Hash ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Password__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-V6 MD5-Encrypted Password</description>
        <label>Encrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Timer__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Hold Timer</description>
        <label>Hold Timer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_MD5_Call_Required__c</fullName>
        <formula>IF(AND(Routing_Protocol__c = &apos;BGP4&apos;, Encrypted_Password__c!=null), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is MD5 Call Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Alive_Timer__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Keep Alive Timer</description>
        <label>Keep Alive Timer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_ASN__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Local ASN</description>
        <label>Local ASN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Hop_Loopback_Address__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Multi Hop Loopback Address</description>
        <label>Multi Hop Loopback Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multicast_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-Multicast Indicator</description>
        <label>Multicast Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Routes_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-No Routes Indicator</description>
        <label>No Routes Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Hops__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Number of Hops</description>
        <label>Number of Hops</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>RDS_VLAN_Information__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packet_Fillter__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-Packet Fillter</description>
        <label>Packet Fillter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PremiseId__c</fullName>
        <formula>RDS_VLAN_Information__r.Circuit_and_VLAN_Details__r.Premise__r.Id</formula>
        <label>PremiseId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Circuit_and_VLAN_Details_V6__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct Link to Parent RDS-Circuit and VLAN Details record</description>
        <label>RDS-Circuit and VLAN Details</label>
        <referenceTo>Circuit_and_VLAN_Details__c</referenceTo>
        <relationshipLabel>RDS-V6 Family Data</relationshipLabel>
        <relationshipName>RDS_V6_Family_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_VLAN_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information</description>
        <label>RDS-VLAN Information</label>
        <referenceTo>VLAN_Information__c</referenceTo>
        <relationshipName>V6_Family_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remove_Private_AS_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Remove Private AS Indicator</description>
        <label>Remove Private AS Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Advertisement__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Route Advertisement</description>
        <label>Route Advertisement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_ASN__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Routing ASN</description>
        <label>Routing ASN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Protocol__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-V6 Routing Protocol Data-Routing Protocol</description>
        <label>Routing Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Opportunity_On_RDS__c</fullName>
        <formula>IF( RDS_VLAN_Information__c != null, RDS_VLAN_Information__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Selected_Opportunity__c , RDS_Circuit_and_VLAN_Details_V6__r.Premise__r.DealHash__r.Selected_Opportunity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Opportunity On RDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Default_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-BGP4 Routing Data-Send Default Indicator</description>
        <label>Send Default Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unencrypted_Password__c</fullName>
        <label>Unencrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_Family_Premise_Number__c</fullName>
        <description>This is a technical field to capture Premise Number related to the record, not required on page layout.</description>
        <formula>IF((ISBLANK(RDS_VLAN_Information__c) || ISNULL(RDS_VLAN_Information__c)) , RDS_Circuit_and_VLAN_Details_V6__r.CVLAN_Premise_Number__c , RDS_VLAN_Information__r.VLAN_Premise_Number__c)</formula>
        <label>V6_Family_Premise_Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_From_Premise__c</fullName>
        <formula>IF(RDS_VLAN_Information__c != null, RDS_VLAN_Information__r.Circuit_and_VLAN_Details__r.Premise__r.RDS_Version__c , RDS_Circuit_and_VLAN_Details_V6__r.Premise__r.RDS_Version__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version From Premise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAN_IP_Address__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-V6 WAN IP Address-WAN IP Address</description>
        <label>WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAN_IP_Length__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V6 Family Data-V6 WAN IP Address-WAN IP Length</description>
        <label>WAN IP Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-V6 Family Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FDV6-{0000}</displayFormat>
        <label>V6 Family Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-V6 Family Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RDS_Edit_Lapsed</fullName>
        <active>true</active>
        <description>RDS Edit Lapsed</description>
        <errorConditionFormula>AND(OR(if(RDS_VLAN_Information__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),True,false),ISPICKVAL( RDS_VLAN_Information__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),!ISCHANGED(Encrypted_Password__c),!ISCHANGED( Routing_Protocol__c),!ISCHANGED( Unencrypted_Password__c),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;, $Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_after_Deal_Hash_creation_V6</fullName>
        <active>true</active>
        <errorConditionFormula>(((ISNULL(RDS_Circuit_and_VLAN_Details_V6__c) || ISBLANK(RDS_Circuit_and_VLAN_Details_V6__c))&amp;&amp; (  RDS_VLAN_Information__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos;)) || ((ISNULL(RDS_VLAN_Information__c) || ISBLANK(RDS_VLAN_Information__c))&amp;&amp; (  RDS_Circuit_and_VLAN_Details_V6__r.Premise__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos;))) &amp;&amp; NOT( ISNEW())</errorConditionFormula>
        <errorMessage>Record cannot be updated after Deal Hash has been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_V6Fam</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-V6 Family Data record.</errorMessage>
    </validationRules>
</CustomObject>